--------------------------------------------------------------------------

- 'old' data from end 2007 up to late 2015 is available again
    * adding handlers for new API made available by data gathering project comissioned by Hertie School of Governance (Simon Munzert) and supported by Daimler and Benz Foundation
    * adding petermeissner.de as first endpoint for newly available data




version 2.0.x // 2017-09-24 ... 
--------------------------------------------------------------------------

- using pageviews package (and wikipedias own API as data source)



version 1.1.14 // 2017-09-23 ... 
--------------------------------------------------------------------------

- CRAN compliance


version 1.1.13 // 2017-09-23 ... 
--------------------------------------------------------------------------


- the stats.grok.se data source went away leading to numerous errors in the tests - those were turned off



version 1.1.12 // 2016-12-30 ... 
--------------------------------------------------------------------------

* BUGFIX 

- wp_linked_pages() would fail in case of no links at wikipedia page - now it does not / https://github.com/petermeissner/wikipediatrend/issues/27 



version 1.1.10 // 2016-03-18 ... 
--------------------------------------------------------------------------

* BUGFIX

- tests, README generation as well as vignette generation would fail due to stats.grok.se serving no data after 2016-01-16
- examples were restricted to data prior to that date to make tests and vignette/README generation run smoothly again


* FEATURE

- wp_trend() results came unordered, results are now ordered according to date, lang, title (making it easy to use something like plot( wp_trend("test", from="2015-01-01", to="2015-01-30")[,c("date", "count")], type="b")
- cut loose unnecessary RCurl dependency 


version 1.1.9 // 2016-02-29 ... 
--------------------------------------------------------------------------

* BUGFIX
