@@ -1,8 +1,7 @@
 Package: wikipediatrend
 Title: Public Subject Attention via Wikipedia Page View Statistics
-Version: 2.1.2
-Date: 2019-09-19
-Author: Peter Meissner [aut, cre],  [ctb]
+Version: 2.1.3
+Date: 2019-09-20
 Authors@R:
     c(
       person(
@@ -13,7 +12,9 @@ Authors@R:
     )
 Maintainer: Peter Meissner <retep.meissner@gmail.com>
 Description: A convenience wrapper for the Wikipedia page access statistics API 
-  binding package called 'pageviews'. 
+  binding the 'pageviews' package and using an additional self composed data 
+  source thus covering a time span from very late 2007 up to the present for 
+  daily page views. 
 License: GPL (>= 2)
 Depends:
     R (>= 3.0.0)
