@@ -5,6 +5,12 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  fig.path = "man/figures/README-"
+)
+```
+
 
 ```{r, include=FALSE}
 options("width"=110)
