@@ -30,7 +30,7 @@ at https://en.wikipedia.org, \code{"de"} for the German version found at
 https://de.wikipedia.org or perhaps \code{"als"} for the Alemannic dialect 
 found under https://als.wikipedia.org/.}
 
-\item{warn}{Warn about not beeing able to retrieve data or not?}
+\item{warn}{Warn about not being able to retrieve data or not?}
 }
 \description{
 Function for getting access statistics for wikipedia pages
