@@ -29,7 +29,7 @@ Supply some sort of timestamp e.g. of class POSIXlt, POSIXct, Date, or
 character. If the option is of type character it should be in the form of 
 yyyy-mm-dd.}
 
-\item{warn}{Warn about not beeing able to retrieve data or not?}
+\item{warn}{Warn about not being able to retrieve data or not?}
 }
 \description{
 Title
